--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
             <li><a href="#pendidikan">Pendidikan</a></li>
             <li><a href="#kontak">Kontak</a></li>
         </ul>
-    </nav>
+    </nav>g
 
-    <!-- Menggunakan tag <article> alih-alih <section> -->
     <content>
 
         <article id="profil">
