--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="#pendidikan">Pendidikan</a></li>
             <li><a href="#kontak">Kontak</a></li>
         </ul>
-    </nav>g
+    </nav>
 
     <content>
 
